Update build system to properly use dependencies. Vendor glog and make it properly use gflags for additional flags. Start writing the new GLSL code for the path tracing framework.

--- a/herakles/shaders/BUILD
+++ b/herakles/shaders/BUILD
@@ -17,6 +17,14 @@ load("@com_github_renatoutsch_rules_spirv//glsl:defs.bzl", "glsl_library")
 package(default_visibility = ["//visibility:public"])
 
 glsl_library(
+    name = "path_tracer",
+    srcs = ["path_tracer.glsl"],
+    deps = [
+        ":random",
+    ],
+)
+
+glsl_library(
     name = "random",
     srcs = ["random.glsl"],
 )
