Work on the shaders. Not working yet.

--- a/herakles/shaders/BUILD
+++ b/herakles/shaders/BUILD
@@ -28,3 +28,8 @@ glsl_library(
     name = "random",
     srcs = ["random.glsl"],
 )
+
+glsl_library(
+    name = "scene",
+    srcs = ["scene.glsl"],
+)
