Use the camera description from the scene file.

--- a/herakles/vulkan/BUILD
+++ b/herakles/vulkan/BUILD
@@ -205,6 +205,7 @@ cc_library(
     copts = HERAKLES_CPP_COPTS,
     deps = [
         ":surface",
+        "//herakles/scene",
         "//third_party:glm",
     ],
 )
